--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav class="nav">
 			<div class="logo_img">
 				<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-					xmlns:svgjs="http://svgjs.dev/svgjs" width="80" height="70" viewBox="0 0 2000 1247">
+					xmlns:svgjs="http://svgjs.dev/svgjs" width="80" height="50" viewBox="0 0 2000 1247">
 					<g transform="matrix(1,0,0,1,-1.2121212121212466,0.504858299595071)">
 						<svg viewBox="0 0 396 247" data-background-color="#f0ead8" preserveAspectRatio="xMidYMid meet"
 							height="1247" width="2000" xmlns="http://www.w3.org/2000/svg"
@@ -93,7 +93,7 @@
 			<div class="nav_menu" id="nav-menu">
 				<ul class="nav_list">
 					<li class="nav_item">
-						<a href="" class="nav_link">Home</a>
+						<a href="/" class="nav_link">Home</a>
 					</li>
 					<li class="nav_item">
 						<a href="#about" class="nav_link">About</a>
@@ -111,7 +111,7 @@
 
 	<!-- ===================================HOME SECTION=========================== -->
 
-	<section class="home_section full_page" id="#home">
+	<section class="home_section full_page" id="home">
 		<div class="home container">
 			<div class="name">
 				<div class="my_name">
@@ -143,22 +143,37 @@
 
 	<section class="about_section full_page" id="about">
 		<div class="about container">
-			<div class="about_text">
-				<h1>My Journey</h1>
-				<p>
-					I am a frontend developer with a passion for creating
-					beautiful and functional websites and applications. <br />
-					I have always been passionate about creating beautiful and
-					functional websites and applications.
-				</p>
-			</div>
 
 			<div class="about_img">
 				<img src="assests/images and videos/about.jpg" alt="" />
 			</div>
 
+			<div class="about_text">
+				<h1 class="about_title">My Journey</h1>
+				<p>
+					My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas whispered
+					stories, and this
+					artistic soul never faded, even when I transitioned from tester to developer. Lines of code became
+					my new brushstrokes,
+					crafting interactive landscapes and websites that weren't just functional, but stories waiting to be
+					told. My artistic
+					eye bleeds into every line, influencing design choices and problem-solving with a touch of
+					creativity. I see the
+					emotional impact of every interaction, the hidden melodies within algorithms. Today, I stand at the
+					intersection of
+					pixels and brushes, a frontend developer with a painter's heart. In one hand, I hold code, in the
+					other, a vision.
+					Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and
+					stories unfurl. Let's
+					collaborate, paint the digital canvas with meaning, and weave our magic together. This is where art
+					meets code, and your
+					vision comes to life. I'm Pooja, your pixel weaver, ready to paint your digital story. Let's create!
+				</p>
+				<a href="" class="resume_link">Download my Resume</a>
+			</div>
+
 			<div class="skill_sets">
-				<h1>Skills</h1>
+				<h1>SKILLS</h1>
 				<div class="skills">
 					<ul class="skill_list">
 						<li>REACT</li>
@@ -166,13 +181,16 @@
 						<li>TYPESCRIPT</li>
 						<li>HTML</li>
 						<li>CSS</li>
+						<li>MongoDB</li>
+						<li>NodeJS</li>
+						<li>ExpressJS</li>
 					</ul>
 
 				</div>
 			</div>
 
 			<div class="experience">
-				<h1>Experience</h1>
+				<h1>EXPERIENCE</h1>
 			</div>
 		</div>
 	</section>
@@ -203,8 +221,7 @@
 				</p>
 
 				<p class="connections">
-					Let's Connect:&nbsp;<a class="link" href="">
-						Linkedin</a>
+					Let's Connect:&nbsp;<a class="link" href="">Linkedin</a>
 					&nbsp;/&nbsp;<a class="link" href="">Github</a>
 				</p>
 			</div>
