styled about section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 			<div class="about_text">
 				<h1 class="about_title">My Journey</h1>
-				<p>
+				<p class="aboutme">
 					My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas whispered
 					stories, and this
 					artistic soul never faded, even when I transitioned from tester to developer. Lines of code became
@@ -176,9 +176,9 @@
 				<h1>SKILLS</h1>
 				<div class="skills">
 					<ul class="skill_list">
-						<li>REACT</li>
-						<li>JAVASCRIPT</li>
-						<li>TYPESCRIPT</li>
+						<li>React</li>
+						<li>Javascript</li>
+						<li>Typescript</li>
 						<li>HTML</li>
 						<li>CSS</li>
 						<li>MongoDB</li>
@@ -191,6 +191,27 @@
 
 			<div class="experience">
 				<h1>EXPERIENCE</h1>
+
+					<div class="outer">
+						<div class="card">
+							<div class="info">
+								<h3 class="title">Freelance Frontend Developer</h3>
+								<p>May 2022 - Present</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="info">
+								<h3 class="title">Contract Frontend Developer</h3>
+								<p>April 2021 - March 2022</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="info">
+								<h3 class="title">Test Engineer</h3>
+								<p>November 2018 - November 2020</p>
+							</div>
+						</div>
+					</div>
 			</div>
 		</div>
 	</section>
