--- a/index.html
+++ b/index.html
@@ -143,31 +143,25 @@
 
 	<section class="about_section full_page" id="about">
 		<div class="about container">
-
-			<div class="about_img">
-				<img src="assests/images and videos/about.jpg" alt="" />
+			<div class="img_outer">
+				<div class="about_img">
+					<img src="assests/images and videos/about.jpg" alt="" />
+				</div>
 			</div>
+
 
 			<div class="about_text">
 				<h1 class="about_title">My Journey</h1>
 				<p class="aboutme">
 					My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas whispered
-					stories, and this
-					artistic soul never faded, even when I transitioned from tester to developer. Lines of code became
-					my new brushstrokes,
+					stories, and this artistic soul never faded, even when I <span class="underline-gradient">transitioned from tester to developer.</span> Lines of code became my new brushstrokes,
 					crafting interactive landscapes and websites that weren't just functional, but stories waiting to be
-					told. My artistic
-					eye bleeds into every line, influencing design choices and problem-solving with a touch of
-					creativity. I see the
-					emotional impact of every interaction, the hidden melodies within algorithms. Today, I stand at the
-					intersection of
-					pixels and brushes, a frontend developer with a painter's heart. In one hand, I hold code, in the
-					other, a vision.
-					Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and
-					stories unfurl. Let's
-					collaborate, paint the digital canvas with meaning, and weave our magic together. This is where art
-					meets code, and your
-					vision comes to life. I'm Pooja, your pixel weaver, ready to paint your digital story. Let's create!
+					told. My artistic eye bleeds into every line, influencing design choices and problem-solving with a
+					touch of creativity. I see the emotional impact of every interaction, the hidden melodies within algorithms. Today, I stand at the
+					intersection of pixels and brushes, a frontend developer with a painter's heart. <span class="underline-gradient">In one hand, I hold code, in the other, a vision.</span>
+					Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and stories unfurl. Let's
+					collaborate, paint the digital canvas with meaning, and weave our magic together. This is where art meets code, and your vision comes to life. 
+					<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital story. Let's create!</span>
 				</p>
 				<a href="" class="resume_link">Download my Resume</a>
 			</div>
