--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- ===================================HEADER================================ -->
 
 	<header class="header">
-		<nav class="nav">
+		<nav class="nav container">
 			<div class="logo_img">
 				<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
 					xmlns:svgjs="http://svgjs.dev/svgjs" width="80" height="50" viewBox="0 0 2000 1247">
@@ -143,66 +143,68 @@
 
 	<section class="about_section full_page" id="about">
 		<div class="about container">
-			<div class="img_outer">
-				<div class="about_img">
-					<img src="assests/images and videos/about.jpg" alt="" />
-				</div>
-			</div>
-
-
-			<div class="about_text">
-				<h1 class="about_title">My Journey</h1>
-				<p class="aboutme">
-					My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas whispered
-					stories, and this artistic soul never faded, even when I <span class="underline-gradient">transitioned from tester to developer.</span> Lines of code became my new brushstrokes,
-					crafting interactive landscapes and websites that weren't just functional, but stories waiting to be
-					told. My artistic eye bleeds into every line, influencing design choices and problem-solving with a
-					touch of creativity. I see the emotional impact of every interaction, the hidden melodies within algorithms. Today, I stand at the
-					intersection of pixels and brushes, a frontend developer with a painter's heart. <span class="underline-gradient">In one hand, I hold code, in the other, a vision.</span>
-					Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and stories unfurl. Let's
-					collaborate, paint the digital canvas with meaning, and weave our magic together. This is where art meets code, and your vision comes to life. 
-					<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital story. Let's create!</span>
-				</p>
-				<a href="" class="resume_link">Download my Resume</a>
-			</div>
-
-			<div class="skill_sets">
-				<h1>SKILLS</h1>
-				<div class="skills">
-					<ul class="skill_list">
-						<li>React</li>
-						<li>Javascript</li>
-						<li>Typescript</li>
-						<li>HTML</li>
-						<li>CSS</li>
-						<li>MongoDB</li>
-						<li>NodeJS</li>
-						<li>ExpressJS</li>
-					</ul>
-
-				</div>
-			</div>
-
-			<div class="experience">
-				<h1>EXPERIENCE</h1>
-
-				<div class="outer">
-					<div class="card">
-						<div class="info">
-							<h3 class="title">Freelance Frontend Developer</h3>
-							<p>May 2022 - Present</p>
-						</div>
+			<div class="about_desc">
+				<div class="img_outer">
+					<div class="about_img">
+						<img src="assests/images and videos/avatar.jpg" alt="" />
 					</div>
-					<div class="card">
-						<div class="info">
-							<h3 class="title">Contract Frontend Developer</h3>
-							<p>April 2021 - March 2022</p>
-						</div>
+				</div>
+
+
+				<div class="about_text">
+					<h1 class="about_title">My Journey</h1>
+					<p class="aboutme">
+						My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas whispered
+						stories, and this artistic soul never faded, even when I <span class="underline-gradient">transitioned from tester to developer.</span> Lines of code became my new brushstrokes,
+						crafting interactive landscapes and websites that weren't just functional, but stories waiting to be
+						told. My artistic eye bleeds into every line, influencing design choices and problem-solving with a
+						touch of creativity. I see the emotional impact of every interaction, the hidden melodies within algorithms. Today, I stand at the
+						intersection of pixels and brushes, a frontend developer with a painter's heart. <span class="underline-gradient">In one hand, I hold code, in the other, a vision.</span>
+						Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and stories unfurl. Let's
+						collaborate, paint the digital canvas with meaning, and weave our magic together. This is where art meets code, and your vision comes to life. 
+						<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital story. Let's create!</span>
+					</p>
+					<a href="assests/documents/resume.pdf" target="_blank" class="resume_link">Download my Resume</a>
+				</div>
+
+				<div class="skill_sets">
+					<h1>SKILLS</h1>
+					<div class="skills">
+						<ul class="skill_list">
+							<li>React</li>
+							<li>Javascript</li>
+							<li>Typescript</li>
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>MongoDB</li>
+							<li>NodeJS</li>
+							<li>ExpressJS</li>
+						</ul>
+
 					</div>
-					<div class="card">
-						<div class="info">
-							<h3 class="title">Test Engineer</h3>
-							<p>November 2018 - November 2020</p>
+				</div>
+
+				<div class="experience">
+					<h1>EXPERIENCE</h1>
+
+					<div class="outer">
+						<div class="card">
+							<div class="info">
+								<h4 class="title">Freelance Frontend Developer</h4>
+								<p>May 2022 - Present</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="info">
+								<h4 class="title">Contract Frontend Developer, Sijal in Stiches LLP</h4>
+								<p>April 2021 - March 2022</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="info">
+								<h4 class="title">Test Engineer, Wipro Limited</h4>
+								<p>November 2018 - November 2020</p>
+							</div>
 						</div>
 					</div>
 				</div>
