--- a/index.html
+++ b/index.html
@@ -155,14 +155,23 @@
 					<h1 class="about_title">My Journey</h1>
 					<p class="aboutme">
 						My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas whispered
-						stories, and this artistic soul never faded, even when I <span class="underline-gradient">transitioned from tester to developer.</span> Lines of code became my new brushstrokes,
-						crafting interactive landscapes and websites that weren't just functional, but stories waiting to be
-						told. My artistic eye bleeds into every line, influencing design choices and problem-solving with a
-						touch of creativity. I see the emotional impact of every interaction, the hidden melodies within algorithms. Today, I stand at the
-						intersection of pixels and brushes, a frontend developer with a painter's heart. <span class="underline-gradient">In one hand, I hold code, in the other, a vision.</span>
-						Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and stories unfurl. Let's
-						collaborate, paint the digital canvas with meaning, and weave our magic together. This is where art meets code, and your vision comes to life. 
-						<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital story. Let's create!</span>
+						stories, and this artistic soul never faded, even when I <span
+							class="underline-gradient">transitioned from tester to developer.</span> Lines of code
+						became my new brushstrokes,
+						crafting interactive landscapes and websites that weren't just functional, but stories waiting
+						to be
+						told. My artistic eye bleeds into every line, influencing design choices and problem-solving
+						with a
+						touch of creativity. I see the emotional impact of every interaction, the hidden melodies within
+						algorithms. Today, I stand at the
+						intersection of pixels and brushes, a frontend developer with a painter's heart. <span
+							class="underline-gradient">In one hand, I hold code, in the other, a vision.</span>
+						Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and
+						stories unfurl. Let's
+						collaborate, paint the digital canvas with meaning, and weave our magic together. This is where
+						art meets code, and your vision comes to life.
+						<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital
+							story. Let's create!</span>
 					</p>
 					<a href="assests/documents/resume.pdf" target="_blank" class="resume_link">Download my Resume</a>
 				</div>
@@ -171,14 +180,33 @@
 					<h1>SKILLS</h1>
 					<div class="skills">
 						<ul class="skill_list">
-							<li>React</li>
-							<li>Javascript</li>
-							<li>Typescript</li>
-							<li>HTML</li>
-							<li>CSS</li>
-							<li>MongoDB</li>
-							<li>NodeJS</li>
-							<li>ExpressJS</li>
+							<li>
+								<div class="skill_img">
+
+								</div>
+								React
+							</li>
+							<li>
+								<div class="skill_img"></div>Javascript
+							</li>
+							<li>
+								<div class="skill_img"></div>Typescript
+							</li>
+							<li>
+								<div class="skill_img"></div>HTML
+							</li>
+							<li>
+								<div class="skill_img"></div>CSS
+							</li>
+							<li>
+								<div class="skill_img"></div>MongoDB
+							</li>
+							<li>
+								<div class="skill_img"></div>NodeJS
+							</li>
+							<li>
+								<div class="skill_img"></div>ExpressJS
+							</li>
 						</ul>
 
 					</div>
@@ -245,6 +273,12 @@
 		</div>
 	</section>
 
+	<div class="gradient-container">
+		<div class="gradient1"></div>
+		<div class="gradient2"></div>
+		<div class="gradient3"></div>
+		<div class="gradient4"></div>
+	</div>
 
 </body>
 
