added skills icon

--- a/index.html
+++ b/index.html
@@ -182,30 +182,72 @@
 						<ul class="skill_list">
 							<li>
 								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
 
 								</div>
 								React
 							</li>
 							<li>
-								<div class="skill_img"></div>Javascript
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" />
+								</div>Javascript
 							</li>
 							<li>
-								<div class="skill_img"></div>Typescript
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-plain.svg" />
+								</div>Typescript
 							</li>
 							<li>
-								<div class="skill_img"></div>HTML
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain.svg" />
+								</div>HTML
 							</li>
 							<li>
-								<div class="skill_img"></div>CSS
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain.svg" />
+								</div>CSS
 							</li>
 							<li>
-								<div class="skill_img"></div>MongoDB
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
+								</div>TailwindCSS
 							</li>
 							<li>
-								<div class="skill_img"></div>NodeJS
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" />
+								</div>MongoDB
 							</li>
 							<li>
-								<div class="skill_img"></div>ExpressJS
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
+								</div>NodeJS
+							</li>
+							<li>
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg" />
+								</div>ExpressJS
+							</li>
+
+							<li>
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
+								</div>Figma
+							</li>
+							<li>
+								<div class="skill_img">
+									<img
+										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/photoshop/photoshop-plain.svg" />
+								</div>Adobe Photoshop
 							</li>
 						</ul>
 
@@ -242,7 +284,9 @@
 
 	<!-- ============================PROJECTS SECTION============================= -->
 
-	<section class="projects_section full_page" id="projects"></section>
+	<section class="projects_section full_page" id="projects">
+
+	</section>
 
 	<!-- ===========================CONTACT SECTION=========================== -->
 
@@ -273,12 +317,7 @@
 		</div>
 	</section>
 
-	<div class="gradient-container">
-		<div class="gradient1"></div>
-		<div class="gradient2"></div>
-		<div class="gradient3"></div>
-		<div class="gradient4"></div>
-	</div>
+	<div class="gradient-container"></div>
 
 </body>
 
