added project section

--- a/index.html
+++ b/index.html
@@ -109,213 +109,260 @@
 		</nav>
 	</header>
 
-	<!-- ===================================HOME SECTION=========================== -->
 
-	<section class="home_section full_page" id="home">
-		<div class="home container">
-			<div class="name">
-				<div class="my_name">
-					<h1>
-						Pooja <br />
-						Agarwal
-					</h1>
-				</div>
+	<main>
+		<!-- ===================================HOME SECTION=========================== -->
 
-				<div class="intro">
-					<p>
-						A sprinkle of pixels, a dash of paint, and a whole lot of
-						passion.
-					<div class="welcome">Welcome to my world!</div>
-					</p>
-				</div>
-				<div class="title">
-					<p>
-						Frontend Developer&nbsp;/&nbsp;Creative&nbsp;/&nbsp;Art
-						Enthusiast&nbsp;/&nbsp;Digital Painter
-					</p>
-				</div>
-
-			</div>
-		</div>
-	</section>
-
-	<!-- ============================ABOUT SECTION============================= -->
-
-	<section class="about_section full_page" id="about">
-		<div class="about container">
-			<div class="about_desc">
-				<div class="img_outer">
-					<div class="about_img">
-						<img src="assests/images and videos/avatar.jpg" alt="" />
+		<section class="home_section full_page" id="home">
+			<div class="home container">
+				<div class="name">
+					<div class="my_name">
+						<h1>
+							Pooja <br />
+							Agarwal
+						</h1>
 					</div>
+
+					<div class="intro">
+						<p>
+							A sprinkle of pixels, a dash of paint, and a whole lot of
+							passion.
+						<div class="welcome">Welcome to my world!</div>
+						</p>
+					</div>
+					<div class="title">
+						<p>
+							Frontend Developer&nbsp;/&nbsp;Creative&nbsp;/&nbsp;Art
+							Enthusiast&nbsp;/&nbsp;Digital Painter
+						</p>
+					</div>
+
 				</div>
+			</div>
+		</section>
+
+		<!-- ============================ABOUT SECTION============================= -->
+
+		<section class="about_section" id="about">
+			<div class="about container">
+				<div class="about_desc">
+					<div class="img_outer">
+						<img src="assests/images and videos/Pooja.png" alt="" />
+					</div>
 
 
-				<div class="about_text">
-					<h1 class="about_title">My Journey</h1>
-					<p class="aboutme">
-						My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas whispered
-						stories, and this artistic soul never faded, even when I <span
-							class="underline-gradient">transitioned from tester to developer.</span> Lines of code
-						became my new brushstrokes,
-						crafting interactive landscapes and websites that weren't just functional, but stories waiting
-						to be
-						told. My artistic eye bleeds into every line, influencing design choices and problem-solving
-						with a
-						touch of creativity. I see the emotional impact of every interaction, the hidden melodies within
-						algorithms. Today, I stand at the
-						intersection of pixels and brushes, a frontend developer with a painter's heart. <span
-							class="underline-gradient">In one hand, I hold code, in the other, a vision.</span>
-						Together, I breathe life into digital worlds. Join me on this journey, where pixels dance and
-						stories unfurl. Let's
-						collaborate, paint the digital canvas with meaning, and weave our magic together. This is where
-						art meets code, and your vision comes to life.
-						<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital
-							story. Let's create!</span>
-					</p>
-					<a href="assests/documents/resume.pdf" target="_blank" class="resume_link">Download my Resume</a>
-				</div>
+					<div class="about_text">
+						<h1 class="about_title">My Journey</h1>
+						<p class="aboutme">
+							My childhood wasn't painted in pixels, but in vibrant hues. Each stroke on the canvas
+							whispered
+							stories, and this artistic soul never faded, even when I <span
+								class="underline-gradient">transitioned from tester to developer.</span> Lines of code
+							became my new brushstrokes,
+							crafting interactive landscapes and websites that weren't just functional, but stories
+							waiting
+							to be
+							told. My artistic eye bleeds into every line, influencing design choices and problem-solving
+							with a
+							touch of creativity. I see the emotional impact of every interaction, the hidden melodies
+							within
+							algorithms. Today, I stand at the
+							intersection of pixels and brushes, a frontend developer with a painter's heart. <span
+								class="underline-gradient">In one hand, I hold code, in the other, a vision.</span>
+							Together, I breathe life into digital worlds. Join me on this journey, where pixels dance
+							and
+							stories unfurl. Let's
+							collaborate, paint the digital canvas with meaning, and weave our magic together. This is
+							where
+							art meets code, and your vision comes to life.
+							<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital
+								story. Let's create!</span>
+						</p>
+						<a href="assests/documents/resume.pdf" target="_blank" class="resume_link">Download my
+							Resume</a>
+					</div>
 
-				<div class="skill_sets">
-					<h1>SKILLS</h1>
-					<div class="skills">
-						<ul class="skill_list">
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
+					<div class="skill_sets">
+						<h1>SKILLS</h1>
+						<div class="skills">
+							<ul class="skill_list">
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
 
+									</div>
+									React
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" />
+									</div>Javascript
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-plain.svg" />
+									</div>Typescript
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain.svg" />
+									</div>HTML
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain.svg" />
+									</div>CSS
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
+									</div>TailwindCSS
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" />
+									</div>MongoDB
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
+									</div>NodeJS
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg" />
+									</div>ExpressJS
+								</li>
+
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
+									</div>Figma
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/photoshop/photoshop-plain.svg" />
+									</div>Adobe Photoshop
+								</li>
+							</ul>
+
+						</div>
+					</div>
+
+					<div class="experience">
+						<h1>EXPERIENCE</h1>
+
+						<div class="outer">
+							<div class="card">
+								<div class="info">
+									<h4 class="title">Freelance Frontend Developer</h4>
+									<p>May 2022 - Present</p>
 								</div>
-								React
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" />
-								</div>Javascript
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-plain.svg" />
-								</div>Typescript
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain.svg" />
-								</div>HTML
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain.svg" />
-								</div>CSS
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
-								</div>TailwindCSS
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" />
-								</div>MongoDB
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
-								</div>NodeJS
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg" />
-								</div>ExpressJS
-							</li>
-
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
-								</div>Figma
-							</li>
-							<li>
-								<div class="skill_img">
-									<img
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/photoshop/photoshop-plain.svg" />
-								</div>Adobe Photoshop
-							</li>
-						</ul>
-
-					</div>
-				</div>
-
-				<div class="experience">
-					<h1>EXPERIENCE</h1>
-
-					<div class="outer">
-						<div class="card">
-							<div class="info">
-								<h4 class="title">Freelance Frontend Developer</h4>
-								<p>May 2022 - Present</p>
 							</div>
-						</div>
-						<div class="card">
-							<div class="info">
-								<h4 class="title">Contract Frontend Developer, Sijal in Stiches LLP</h4>
-								<p>April 2021 - March 2022</p>
+							<div class="card">
+								<div class="info">
+									<h4 class="title">Contract Frontend Developer, Sijal in Stiches LLP</h4>
+									<p>April 2021 - March 2022</p>
+								</div>
 							</div>
-						</div>
-						<div class="card">
-							<div class="info">
-								<h4 class="title">Test Engineer, Wipro Limited</h4>
-								<p>November 2018 - November 2020</p>
+							<div class="card">
+								<div class="info">
+									<h4 class="title">Test Engineer, Wipro Limited</h4>
+									<p>November 2018 - November 2020</p>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
-	<!-- ============================PROJECTS SECTION============================= -->
+		<!-- ============================PROJECTS SECTION============================= -->
 
-	<section class="projects_section full_page" id="projects">
-
-	</section>
-
-	<!-- ===========================CONTACT SECTION=========================== -->
-
-	<section class="contact_section full_page" id="contact">
-		<div class="contact container">
-			<div class="hello-div">
-				<h1 class="hello">
-					Hello.
-				</h1>
-				<p class="headline">Building Your Dream Team? I'm Ready to Code and Create.</p>
+		<section class="projects_section" id="projects">
+			<div class="project container">
+				<div class="section_heading">
+					<h1 class="project_heading">Projects</h1>
+				</div>
+				<div class="project_cards">
+					<div class="cards">
+						<img class="project_img" src="assests/images and videos/project1.png" alt="project1" />
+						<div class="project_details">
+							<h2 class="project_name">Leafy Eden</h2>
+							<h4 class="project_tech">Tech Stack: HTML, CSS, Javascript</h4>
+							<p class="project_about">Leafy Eden is a user-friendly online plant store landing page. The
+								landing page
+								prioritizes a simple and easy-to-navigate interface for customers browsing their
+								selection
+								of plants. It caters to user preference by offering both light and dark theme
+								options, and ensures a smooth experience on any device by being responsive.</p>
+							<a href="https://apooja.dev/plant-store-website/" class="project_link">Visit Demo</a>
+						</div>
+					</div>
+					<div class="cards">
+						<img class="project_img" src="assests/images and videos/project2.png" alt="project2" />
+						<div class="project_details">
+							<h2 class="project_name">ToDo App</h2>
+							<h4 class="project_tech">Tech Stack: React, Javascript , CSS</h4>
+							<p class="project_about">Todo is a react-based application which manages a list of tasks the
+								user can add, remove and potentially mark as completed. It has a simple and
+								user-friendly
+								interface for adding new tasks and displaying the existing ones. </p>
+							<a href="https://apooja.dev/todo-list-app/" class="project_link">Visit Demo</a>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="">
+				<h2 class="">My ArtWorks</h2>
+				</div> -->
 			</div>
-			<div class="contact_details">
 
-				<p class="description">
-					My portfolio is just a glimpse into my capabilities. I'm eager to discuss how my skills and passion
-					can contribute to your team's success. Let's talk!
-				</p>
+		</section>
 
-				<p class="email">
-					Email: <a href="" class="link">poojaagarwal367@gmail.com</a>
-				</p>
+		<!-- ===========================CONTACT SECTION=========================== -->
 
-				<p class="connections">
-					Let's Connect:&nbsp;<a class="link" href="">Linkedin</a>
-					&nbsp;/&nbsp;<a class="link" href="">Github</a>
-				</p>
+		<section class="contact_section full_page" id="contact">
+			<div class="contact container">
+				<div class="hello-div">
+					<h1 class="hello">
+						Hello.
+					</h1>
+					<p class="headline">Building Your Dream Team? I'm Ready to Code and Create.</p>
+				</div>
+				<div class="contact_details">
+
+					<p class="description">
+						My portfolio is just a glimpse into my capabilities. I'm eager to discuss how my skills and
+						passion
+						can contribute to your team's success. Let's talk!
+					</p>
+
+					<p class="email">
+						Email: <a href="" class="link">poojaagarwal367@gmail.com</a>
+					</p>
+
+					<p class="connections">
+						Let's Connect:&nbsp;<a class="link" href="">Linkedin</a>
+						&nbsp;/&nbsp;<a class="link" href="">Github</a>
+					</p>
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</main>
+
+
+
 
 	<div class="gradient-container"></div>
 
