--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 						<div class="outer">
 							<div class="card">
 								<div class="info">
-									<h4 class="title">Freelance Frontend Developer</h4>
+									<h4 class="title">Frontend Developer, Freelance</h4>
 									<p>May 2022 - Present</p>
 								</div>
 							</div>
@@ -349,12 +349,13 @@
 					</p>
 
 					<p class="email">
-						Email: <a href="" class="link">poojaagarwal367@gmail.com</a>
+						Email: <span class="underline-gradient"><a href=""
+								class="link">poojaagarwal367@gmail.com</a></span>
 					</p>
 
 					<p class="connections">
-						Let's Connect:&nbsp;<a class="link" href="">Linkedin</a>
-						&nbsp;/&nbsp;<a class="link" href="">Github</a>
+						Let's Connect: <span class="underline-gradient"><a class="link" href="">Linkedin</a>
+							&nbsp;/&nbsp;<a class="link" href="">Github</a></span>
 					</p>
 				</div>
 			</div>
