--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
 					</p>
 
 					<p class="connections">
-						Let's Connect: <span class="underline-gradient"><a class="link" href="">Linkedin</a>
-							&nbsp;/&nbsp;<a class="link" href="">Github</a></span>
+						Let's Connect: <span class="underline-gradient"><a class="link" href="">Linkedin</a></span>
+						/ <span class="underline-gradient"><a class="link" href="">Github</a></span>
 					</p>
 				</div>
 			</div>
