--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<header class="header">
 		<nav class="nav container">
-			<div class="logo_img">
+			<a class="logo_img" href="">
 				<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
 					xmlns:svgjs="http://svgjs.dev/svgjs" width="80" height="50" viewBox="0 0 2000 1247">
 					<g transform="matrix(1,0,0,1,-1.2121212121212466,0.504858299595071)">
@@ -89,7 +89,7 @@
 						</svg>
 					</g>
 				</svg>
-			</div>
+			</a>
 			<div class="nav_menu" id="nav-menu">
 				<ul class="nav_list">
 					<li class="nav_item">
@@ -300,7 +300,7 @@
 						<img class="project_img" src="assests/images and videos/project1.png" alt="project1" />
 						<div class="project_details">
 							<h2 class="project_name">Leafy Eden</h2>
-							<h4 class="project_tech">Tech Stack: HTML, CSS, Javascript</h4>
+							<h4 class="project_tech">HTML, CSS, Javascript</h4>
 							<p class="project_about">Leafy Eden is a user-friendly online plant store landing page. The
 								landing page
 								prioritizes a simple and easy-to-navigate interface for customers browsing their
@@ -314,7 +314,7 @@
 						<img class="project_img" src="assests/images and videos/project2.png" alt="project2" />
 						<div class="project_details">
 							<h2 class="project_name">ToDo App</h2>
-							<h4 class="project_tech">Tech Stack: React, Javascript, CSS</h4>
+							<h4 class="project_tech">React, Javascript, CSS</h4>
 							<p class="project_about">Todo is a react-based application which manages a list of tasks the
 								user can add, remove and potentially mark as completed. It has a simple and
 								user-friendly
@@ -349,13 +349,13 @@
 					</p>
 
 					<p class="email">
-						Email: <span class="underline-gradient"><a href=""
+						Email: <span class="underline-gradient-link"><a href=""
 								class="link">poojaagarwal367@gmail.com</a></span>
 					</p>
 
 					<p class="connections">
-						Let's Connect: <span class="underline-gradient"><a class="link" href="">Linkedin</a></span>
-						/ <span class="underline-gradient"><a class="link" href="">Github</a></span>
+						Let's Connect: <span class="underline-gradient-link"><a class="link" href="">Linkedin</a></span>
+						/ <span class="underline-gradient-link"><a class="link" href="">Github</a></span>
 					</p>
 				</div>
 			</div>
