added responsive view for mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<!-- =================================================================== -->
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+
 	<title>APooja</title>
 	<link rel="stylesheet" href="../assests/css/styles.css" />
 </head>
@@ -105,6 +109,15 @@
 						<a href="#contact" class="nav_link">Contact</a>
 					</li>
 				</ul>
+				<div class="nav__close" id="nav-close">
+					<i class="ri-close-line"></i>
+				</div>
+			</div>
+			<div class="nav__btns">
+
+				<div class="nav__toggle" id="nav-toggle">
+					<i class="ri-menu-line"></i>
+				</div>
 			</div>
 		</nav>
 	</header>
@@ -122,18 +135,18 @@
 							Agarwal
 						</h1>
 					</div>
+					<div class="title">
+						<p>
+							Frontend Developer / Creative/ Art
+							Enthusiast / Digital Painter
+						</p>
+					</div>
 
 					<div class="intro">
 						<p>
 							A sprinkle of pixels, a dash of paint, and a whole lot of
 							passion.
 						<div class="welcome">Welcome to my world!</div>
-						</p>
-					</div>
-					<div class="title">
-						<p>
-							Frontend Developer&nbsp;/&nbsp;Creative&nbsp;/&nbsp;Art
-							Enthusiast&nbsp;/&nbsp;Digital Painter
 						</p>
 					</div>
 
@@ -189,10 +202,41 @@
 								<li>
 									<div class="skill_img">
 										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain.svg" />
+									</div>HTML
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain.svg" />
+									</div>CSS
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
 											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
 
 									</div>
 									React
+
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
+									</div>NodeJS
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
+									</div>Figma
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" />
+									</div>MongoDB
 								</li>
 								<li>
 									<div class="skill_img">
@@ -206,36 +250,8 @@
 											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-plain.svg" />
 									</div>Typescript
 								</li>
-								<li>
-									<div class="skill_img">
-										<img
-											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain.svg" />
-									</div>HTML
-								</li>
-								<li>
-									<div class="skill_img">
-										<img
-											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain.svg" />
-									</div>CSS
-								</li>
-								<li>
-									<div class="skill_img">
-										<img
-											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
-									</div>TailwindCSS
-								</li>
-								<li>
-									<div class="skill_img">
-										<img
-											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" />
-									</div>MongoDB
-								</li>
-								<li>
-									<div class="skill_img">
-										<img
-											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
-									</div>NodeJS
-								</li>
+
+
 								<li>
 									<div class="skill_img">
 										<img
@@ -243,17 +259,18 @@
 									</div>ExpressJS
 								</li>
 
-								<li>
-									<div class="skill_img">
-										<img
-											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
-									</div>Figma
-								</li>
+
 								<li>
 									<div class="skill_img">
 										<img
 											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/photoshop/photoshop-plain.svg" />
-									</div>Adobe Photoshop
+									</div>Photoshop
+								</li>
+								<li>
+									<div class="skill_img">
+										<img
+											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
+									</div>TailwindCSS
 								</li>
 							</ul>
 
@@ -361,12 +378,12 @@
 			</div>
 		</section>
 	</main>
-
-
-
+	<!-- <footer></footer> -->
 
 	<div class="gradient-container"></div>
 
+	<!-- ===================JS Script===================== -->
+	<script src="assests/scripts/script.js"></script>
 </body>
 
 </html>
