about me section

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 						<div class="outer">
 							<div class="card">
 								<div class="info">
-									<h4 class="title">Frontend Developer, Freelance</h4>
+									<h4 class="title">Career Break- Due to Family Member Caregiving</h4>
 									<p>May 2022 - Present</p>
 								</div>
 							</div>
