--- a/index.html
+++ b/index.html
@@ -371,8 +371,10 @@
 					</p>
 
 					<p class="connections">
-						Let's Connect: <span class="underline-gradient-link"><a class="link" href="">Linkedin</a></span>
-						/ <span class="underline-gradient-link"><a class="link" href="">Github</a></span>
+						Let's Connect: <span class="underline-gradient-link"><a class="link"
+								href="https://www.linkedin.com/in/poojaagarwal21/">Linkedin</a></span>
+						/ <span class="underline-gradient-link"><a class="link"
+								href="https://github.com/apooja21">Github</a></span>
 					</p>
 				</div>
 			</div>
