--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 					</p>
 
 					<p class="email">
-						Email: <span class="underline-gradient-link"><a href=""
+						Email: <span class="underline-gradient-link"><a href="mailto:poojaagarwal367@gmail.com"
 								class="link">poojaagarwal367@gmail.com</a></span>
 					</p>
 
