--- a/index.html
+++ b/index.html
@@ -314,6 +314,28 @@
 				</div>
 				<div class="project_cards">
 					<div class="cards">
+						<img class="project_img" src="assests/images and videos/project3.png" alt="project1" />
+						<div class="project_details">
+							<h2 class="project_name">Workout Buddy</h2>
+							<h4 class="project_tech">Client: React, useContext, TailwindCSS
+								<br />
+								Server: Node, Express, JWT Authentication
+								<br />
+								Database: MongoDB
+							</h4>
+							<p class="project_about">Workout Buddy is a full-stack project which is can be used to make
+								your own personal workout routine. It offers the features of login and signup. Workouts
+								added by the users can't be global seen by other users. User can add workout information
+								like workout name, loads, repetitions and target area.
+							</p>
+							<div class="project_links">
+								<a href="https://github.com/apooja21/workout-buddy-jwt-authentication.git"
+									class="source_link">Source Code</a>
+							</div>
+
+						</div>
+					</div>
+					<div class="cards">
 						<img class="project_img" src="assests/images and videos/project1.png" alt="project1" />
 						<div class="project_details">
 							<h2 class="project_name">Leafy Eden</h2>
@@ -324,7 +346,11 @@
 								selection
 								of plants. It caters to user preference by offering both light and dark theme
 								options, and ensures a smooth experience on any device by being responsive.</p>
-							<a href="https://apooja.dev/plant-store-website/" class="project_link">Visit Demo</a>
+							<div class="project_links">
+								<a href="https://apooja.dev/plant-store-website/" class="project_link">Visit Demo</a>
+								<a href="https://github.com/apooja21/plant-store-website.git" class="source_link">Source
+									Code</a>
+							</div>
 						</div>
 					</div>
 					<div class="cards">
@@ -335,8 +361,12 @@
 							<p class="project_about">Todo is a react-based application which manages a list of tasks the
 								user can add, remove and potentially mark as completed. It has a simple and
 								user-friendly
-								interface for adding new tasks and displaying the existing ones. </p>
-							<a href="https://apooja.dev/todo-list-app/" class="project_link">Visit Demo</a>
+								interface for adding new tasks and displaying the existing ones.</p>
+							<div class="project_links">
+								<a href="https://apooja.dev/todo-list-app/" class="project_link">Visit Demo</a>
+								<a href="https://github.com/apooja21/todo-list-app.git" class="source_link">Source
+									Code</a>
+							</div>
 						</div>
 					</div>
 				</div>
